--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "homepage": "https://nbowisdar.github.io/Mariia_Sokhanchak/",
+  "homepage": "https://nbowisdar.github.io/sokhanchak",
   "private": true,
   "type": "module",
   "scripts": {
